<resources>
    <string name="app_name">Shoe Store</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="or">Or</string>
    <string name="shop">Shop</string>
    <string name="welcome_to">Welcome to</string>
    <string name="instructions">Instructions</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="Login">Login</string>
    <string name="shoes_list">Shoes list</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="first_instruction">The next screen Shoes List will display the items you already added.</string>
    <string name="second_instruction">Press the Plus button to add new shoes at your list.</string>
    <string name="third_instruction">Press the Logout option to log out the app.</string>
</resources>
